After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 656579 - Changing video device causes video to just freeze
Changing video device causes video to just freeze
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: VoIP
unspecified
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
Depends on:
Blocks:
 
 
Reported: 2011-08-15 13:37 UTC by Jonny Lamb
Modified: 2011-08-19 10:15 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
CallWindow: make empathy_call_window_play_camera() public (2.09 KB, patch)
2011-08-18 17:19 UTC, Emilio Pozuelo Monfort
none Details | Review
Reset all the necessary elements when switching cameras (1.39 KB, patch)
2011-08-18 17:19 UTC, Emilio Pozuelo Monfort
none Details | Review

Description Jonny Lamb 2011-08-15 13:37:45 UTC
I changed my camera from my USB webcam to my internal webcam and instead the video just froze and nothing happened. I could see that the USB webcam had stopped as its light had switched off, and I could see that the laptop webcam had switched on as its light had switched on, but I never got its video.

I ended the call and started a new one and it went back to using the USB webcam. Isn't it meant to store this stuff in gsettings?
Comment 1 Guillaume Desmottes 2011-08-15 13:51:10 UTC
Same here, I didn't manage to get the "swap webcam" thing working properly.
Comment 2 Emilio Pozuelo Monfort 2011-08-18 17:19:39 UTC
Created attachment 194159 [details] [review]
CallWindow: make empathy_call_window_play_camera() public
Comment 3 Emilio Pozuelo Monfort 2011-08-18 17:19:48 UTC
Created attachment 194160 [details] [review]
Reset all the necessary elements when switching cameras
Comment 4 Emilio Pozuelo Monfort 2011-08-18 17:22:56 UTC
Please test the above patches and let me know if they work for you... I'm not totally sure if they are right as my usb camera makes empathy-call (and cheese) crash, but I think it's working now since without those patches empathy-call doesn't crash because the video freezes :-)
Comment 5 Jonny Lamb 2011-08-19 10:08:41 UTC
Okay I tested them out but as the echobot is offline and I don't really have anyone to call right now I didn't actually have a call with anyone.

Anyway, my preview changed absolutely fine so, good. I've one more problem about this but I'll open another bug about that.

++ to both patches.
Comment 6 Emilio Pozuelo Monfort 2011-08-19 10:15:50 UTC
Great, merged.