CallWindow: make empathy_call_window_play_camera() public

https://bugzilla.gnome.org/show_bug.cgi?id=656579